hphp/test/quick/hh_bad_start.php.expectf
Fatal error: A .php file must begin with '<?hh'. in %s/test/quick/hh_bad_start.php on line 1
